[package]
name = "vsock_vpn"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
daemonize = "0"
lazy_static = "1"
libc = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0.6.0"
tracing = "0"
csv = "1.1"
tracing-subscriber = "0"
csv-line = "0.2.0"

# These crates are for host pcap stuff, no need to grab them on other arches
[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
etherparse = "0.17"
pcap-file = "2.0.0"
dashmap = "5"
