[package]
name = "vsock_vpn"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
daemonize = "0.5.0"
lazy_static = "1"
libc = "0"
regex = "1"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11"
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["full"] }
tokio-vsock = "0.6.0"
tracing = "0"
csv = "=1.3.0"
tracing-subscriber = "0"
csv-line = "0.2.0"

# These crates are for host pcap stuff, no need to grab them on other arches
[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
etherparse = "0.17"
pcap-file = "2.0.0"
dashmap = "5"
